--- a/analysis/explore_bulkvsingle_gene.Rmd
+++ b/analysis/explore_bulkvsingle_gene.Rmd
@@ -173,8 +173,11 @@ dim(molecules_with_nonzero_all[molecules_with_nonzero_all$non_zero_cells_all==1,
 dim(molecules_with_nonzero_all[molecules_with_nonzero_all$non_zero_cells_all==2,])[1]
 
 
+###In function need to count the number of these genes that are only found found in single cell
 prop_cell_function= function(c){
-  return(dim(molecules_with_nonzero_all[molecules_with_nonzero_all$non_zero_cells_all==c,])[1])
+  x= molecules_with_nonzero_all[molecules_with_nonzero_all$non_zero_cells_all==c, ]
+  x[rownames(x) %in% rownames(molecules_only_SC),]
+  return(dim(x)[1])
 }
 
 prop_cell_function(1)
@@ -186,35 +189,17 @@ for (i in seq(1:864)){
   num= prop_cell_function(i)
   prop_cells=c(prop_cells, num)
 }
-plot(prop_cells/864, ylab="Proportion of genes detected per number of cels given gene observed in sigle cell or pulk ")
+plot(prop_cells/971, ylab="proportion of single cell only genes", xlab="number of cells")
 
 
-# given a gene is observed in single cell or bulk ( genes), we condition on the 
-# number of cells (ranging 0 - 864 cells) and look at the proportion of cells
-# that a gene is detected in single cell 
+# For all genes that are detected in single cell or bulk (19,027 genes), we condition on the 
+# number of cells (ranging 1 - 864 cells) and given n number of cells, we look at 
+# the proportion of genes that are detected in single cell only but not in bulk
 
 
 ```
 
-```{r}
-prop_cell_function_SConly= function(c){
-  return(dim(molecules_with_nonzero[molecules_with_nonzero$non_zero_cells==c,])[1])
-}
 
-#do this in sapply for 0-864
-prop_cells_SC= c()
-
-for (i in seq(1:864)){
-  num= prop_cell_function_SConly(i)
-  prop_cells_SC=c(prop_cells_SC, num)
-}
-
-plot(prop_cells_SC)
-
-table(molecules_with_nonzero$non_zero_cells)
-
-#condition on only single cell, 424 in 1 cell, 197 in 2 cells, number of genes found in that cell number  
-```
 
 
 
