--- a/analysis/explore_bulkvsingle_gene.Rmd
+++ b/analysis/explore_bulkvsingle_gene.Rmd
@@ -236,4 +236,5 @@ plot((bulk_and_order$bulk_mean) , pch=46, cex=10, col=col_vec_onlyBULK, main = "
 
 <!-- Insert the session information into the document -->
 ```{r session-info}
+sessionInfo()
 ```
